fixed contact link alignment, working on fixing icon appereace when on window

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -21,7 +21,7 @@ header {
 .switch {
     position: absolute;
     top: 50%;
-    left: 20px; 
+    left: 30px; 
     transform: translateY(-50%);
     width: 40px;
     height: 20px;
@@ -62,14 +62,15 @@ input:checked + .slider:before {
 /* ------------------- */
 /* fade text to image */
 .contact {
-    position: fixed;
+    position: relative;
     display: inline-block;
+    margin-top: 0px;
 }
 .contact_text {
     position: absolute;
     top: 0;
     left: 0;
-    margin-top: 10px;
+    margin-top: 16px;
     margin-left: 10px; 
     opacity: 1;
     transition: opacity .2s ease .1s;
